# FlashLogSystemSpi

./: CMakeLists.txt  README.md  ld.sh  mk.sh
check/: check.cpp  check.h
debug/: adc_log.csv  logger_viewer.py  plot_adc_log.py  plot_logger_viewer.py
debug/logger_stas/: plot_logger_viewer2.py
include/: AppTasks.h  DebugUtils.h  EventLogger.h  FlashDriver.h  FlashLogStorage.h  FreeRTOSConfig.h
src/: AdcLoggerTask.cpp  DebugUtils.cpp  EventLogger.cpp  FlashDriver.cpp  FlashLogStorage.cpp  UartDma.cpp  main.cpp  task_command.cpp
